--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ and open the template in the editor.
     <title>Angular 2 QuickStart</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <!--<link rel="stylesheet" href="styles.css">-->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="wip.css">
 
     <!-- 1. Load libraries -->
      <!-- Polyfill(s) for older browsers -->
@@ -28,10 +30,6 @@ and open the template in the editor.
 
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...
-    
-    
-        <p>Du HTML brut inséré dans "my-app"...</p>
-    </my-app>
+    <my-app>Loading...</my-app>
   </body>
 </html>
