Working on layout, added Article directive, todo HTTP service

--- a/app/wip.html
+++ b/app/wip.html
@@ -40,18 +40,7 @@
 <section class="container conteneur" id="conteneurPrincipal">
     <div class="row">
         <div class="col-sm-8" id="principal">
-            <div class="page-header">
-                <h2>
-                    Article container
-                     <small>Subtext for header</small>
-                </h2>
-            </div>
-                                    
-            <main id="conteneurPrincipalMain">
-                <div id="elements">
-                    
-                </div>
-            </main>
+            <my-article></my-article>
         </div>
         <div class="col-sm-4" id="colonneDroite">
             <div class="panel panel-default">
