--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
   <head>
-    <title>Angular 2 QuickStart</title>
+    <title>Projet WebDAN</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--<link rel="stylesheet" href="styles.css">-->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <!-- Ce fichier est le point d'entrée sur le projet -->
     <!-- 1. Load libraries -->
+    <!-- Charge les modules Angular, dont systemjs.js pour l'autoload des fonctions et classes -->
      <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
@@ -19,6 +21,7 @@
   </head>
   <!-- 3. Display the application -->
   <body>
+    <!-- Tout l'affichage du projet se fait a partir de cette balise HTML -->
     <my-app>Loading...</my-app>
   </body>
 </html>
