Added error-list and error.service, working

--- a/app/wip.html
+++ b/app/wip.html
@@ -54,9 +54,10 @@ Basée sur le kit static fourni -->
         <div class="col-sm-4" id="colonneDroite">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h2 class="panel-title">SideBar</h2>
+                    <h2 class="panel-title">Temp error list</h2>
                 </div>
                 <div class="panel-body">
+                  <my-error-list></my-error-list>
                 </div>
             </div>
         </div>
