--- a/app/wip.html
+++ b/app/wip.html
@@ -4,7 +4,7 @@ Basée sur le kit static fourni -->
 <header class="navbar-static-top bs-docs-nav" id="header">
     <!-- Static navbar -->
     <!-- Destiné a devenir un ToolsComponents -->
-    <div id="bandeau-superieur">
+    <!-- <div id="bandeau-superieur">
         <div class="container">
             <a id="evitement" href="#conteneurPrincipalMain">Zone outils WebDAN</a>
             <div class="navbar-header">
@@ -14,18 +14,18 @@ Basée sur le kit static fourni -->
 
             </nav>
         </div>
-    </div>
+    </div> -->
     <!-- Zone avec bannière et logo -->
     <div id="conteneurLogo">
         <div class="container conteneur">
             <div class="row">
                 <div id="conteneurLogoTexte" class="col-xs-7">
                     <h1>
-                        <span class="mainTitle" style="float:left"><a href="#">Projet WebDAN</a></span>
-                        <span class="subTitle" style="float:left">AngularJS</span>
+                        <span class="mainTitle" style="float:left"><a href="#">LE GROUPE LA POSTE</a></span>
+                        <span class="subTitle" style="float:left">EN 2016</span>
                     </h1>
                 </div>
-                <img id="logo" alt="LE GROUPE LA POSTE" src="images/logo.png" class="pull-right">
+                <img id="logo" alt="LE GROUPE LA POSTE" src="public/images/logo.png" class="pull-right">
             </div>
         </div>
     </div>
@@ -35,35 +35,29 @@ Basée sur le kit static fourni -->
     <div id="conteneurMenu">
         <nav class="container barreMenu conteneur">
             <ul class="nav navbar-nav">
-                <li class="active "><a href="" class="liensMenu">Accueil</a></li>
-                <li><a href="" class="liensMenu">Page 2</a></li>
-                <li><a href="" class="liensMenu">Page 3</a></li>
+                <li class="active "><a href="#" class="liensMenu">Resultats</a></li>
+                <li><a href="#" class="liensMenu">Dates-clés</a></li>
+                <li><a href="#" class="liensMenu">Comex</a></li>
             </ul>
         </nav><!-- /container -->
     </div>
 </section>
 <!-- Section principale -->
-<section class="container conteneur" id="conteneurPrincipal">
-    <div class="row">
-      <!-- Conteneur des articles, destiné a devenir ArticleListComponent -->
-        <div class="col-sm-8" id="principal">
-          <!-- Balise custom, appele ArticleComponent, destiné a intégrer ArticleListComponent -->
-          <my-article></my-article>
-        </div>
-        <!-- Sidebar -->
-        <div class="col-sm-4" id="colonneDroite">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h2 class="panel-title">Temp error list</h2>
-                </div>
-                <div class="panel-body">
-                  <my-error-list></my-error-list>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- TODO : Error Component... -->
-</section>
+<div class="conteneurPrincipalMain">
+  <section class="container conteneur" id="conteneurPrincipal">
+      <div class="row">
+        <!-- Conteneur des articles, destiné a devenir ArticleListComponent -->
+          <div class="col-sm-8" id="principal">
+            <!-- Balise custom, appele ArticleComponent, destiné a intégrer ArticleListComponent -->
+            <my-article></my-article>
+          </div>
+          <!-- Sidebar -->
+          <my-sidebar></my-sidebar>
+      </div>
+      <!-- <my-error-list></my-error-list> -->
+      <!-- TODO : Error Component... -->
+  </section>
+</div>
 <footer>
     <div class="container conteneur barreMenu">
         WebDAN Angular2
