Fixed title and page change

--- a/app/wip.html
+++ b/app/wip.html
@@ -36,9 +36,9 @@ Basée sur le kit static fourni -->
     <div id="conteneurMenu">
         <nav class="container barreMenu conteneur">
             <ul class="nav navbar-nav">
-                <li class="active " (click)="selectPage(1)"><a href="#" class="liensMenu">Resultats</a></li>
-                <li><a href="#" class="liensMenu" (click)="selectPage(2)">Dates-clés</a></li>
-                <li><a href="#" class="liensMenu" (click)="selectPage(3)">Comex</a></li>
+                <li class="active " (click)="selectPage('Résultats')"><a href="#" class="liensMenu">Resultats</a></li>
+                <li><a href="#" class="liensMenu" (click)="selectPage('Dates clés')">Dates-clés</a></li>
+                <li><a href="#" class="liensMenu" (click)="selectPage('COMEX')">Comex</a></li>
             </ul>
         </nav><!-- /container -->
     </div>
