--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.js"></script>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <!-- Ce fichier est le point d'entrée sur le projet -->
     <!-- 1. Load libraries -->
     <!-- Charge les modules Angular, dont systemjs.js pour l'autoload des fonctions et classes -->
