Fixed few errors

--- a/app/wip.html
+++ b/app/wip.html
@@ -55,7 +55,7 @@ Basée sur le kit static fourni -->
           <!-- Sidebar -->
           <my-sidebar></my-sidebar>
       </div>
-      <!-- <my-error-list [errors]='errors'></my-error-list> -->
+      <my-error-list [errors]='errors'></my-error-list>
   </section>
 </div>
 <footer>
