--- a/app/wip.html
+++ b/app/wip.html
@@ -6,7 +6,7 @@ Basée sur le kit static fourni -->
     <!-- Destiné a devenir un ToolsComponents -->
     <div id="bandeau-superieur" class="row">
         <div class="col-md-4">
-          <a href="#">Liste des erreurs</a>
+          <my-error-list [errors]='errors'></my-error-list>
         </div>
             <!-- <div class="navbar-header">
 
@@ -55,7 +55,7 @@ Basée sur le kit static fourni -->
           <!-- Sidebar -->
           <my-sidebar></my-sidebar>
       </div>
-      <my-error-list [errors]='errors'></my-error-list>
+      <!-- <my-error-list [errors]='errors'></my-error-list> -->
   </section>
 </div>
 <footer>
