working on displayErrors method

--- a/app/wip.html
+++ b/app/wip.html
@@ -23,7 +23,7 @@ Basée sur le kit static fourni -->
                 <div id="conteneurLogoTexte" class="col-xs-7">
                     <h1>
                         <span class="mainTitle" style="float:left"><a href="#">LE GROUPE LA POSTE</a></span>
-                        <span class="subTitle" style="float:left">EN 2016</span>
+                        <span class="subTitle" style="float:left" data-error="true">EN 2016</span>
                     </h1>
                 </div>
                 <img id="logo" alt="LE GROUPE LA POSTE" src="public/images/logo.png" class="pull-right">
