--- a/app/wip.html
+++ b/app/wip.html
@@ -3,7 +3,7 @@ WORK IN PROGRESS
 Basée sur le kit static fourni -->
 <header class="navbar-static-top bs-docs-nav" id="header">
     <!-- Static navbar -->
-    <!-- Destiné a devenir un ToolsComponents -->
+    <!-- Destiné a devenir un ToolsComponent -->
     <div id="bandeau-superieur" class="row">
         <div class="col-md-4">
           <my-error-list [errors]="errors"></my-error-list>
@@ -22,7 +22,9 @@ Basée sur le kit static fourni -->
             <div class="row">
                 <div id="conteneurLogoTexte" class="col-xs-7">
                     <h1>
-                        <span class="mainTitle" style="float:left"><a href="#">LE GROUPE LA POSTE</a></span>
+                        <span class="mainTitle" style="float:left">
+                          <a href="#" (click)="selectPage('Accueil')">LE GROUPE LA POSTE</a>
+                        </span>
                         <span class="subTitle" style="float:left" data-error="true">EN 2016</span>
                     </h1>
                 </div>
@@ -36,7 +38,7 @@ Basée sur le kit static fourni -->
     <div id="conteneurMenu">
         <nav class="container barreMenu conteneur">
             <ul class="nav navbar-nav">
-                <li class="active " (click)="selectPage('Résultats')"><a href="#" class="liensMenu">Résultats</a></li>
+                <li class="active"><a href="#" class="liensMenu" (click)="selectPage('Résultats')">Résultats</a></li>
                 <li><a href="#" class="liensMenu" (click)="selectPage('Dates clés')">Dates-clés</a></li>
                 <li><a href="#" class="liensMenu" (click)="selectPage('COMEX')">Comex</a></li>
             </ul>
@@ -50,7 +52,7 @@ Basée sur le kit static fourni -->
         <!-- Conteneur des articles, destiné a devenir ArticleListComponent -->
           <div class="col-sm-8" id="principal">
             <!-- Balise custom, appele ArticleComponent, destiné a intégrer ArticleListComponent -->
-            <my-article [articles]='currArticles'></my-article>
+            <my-article-list [articles]='currArticles'></my-article-list>
           </div>
           <!-- Sidebar -->
           <my-sidebar></my-sidebar>
