--- a/app/wip.html
+++ b/app/wip.html
@@ -1,59 +1,70 @@
 <!-- Template principale de page, se reduit au fur et a mesure de la crétion des Components
 WORK IN PROGRESS
 Basée sur le kit static fourni -->
-<header class="navbar-static-top bs-docs-nav" id="header">
-    <!-- Static navbar -->
-    <!-- Destiné a devenir un ToolsComponent -->
-    <my-toolbar [errors]="errors" (errorDisplayed)="onDisplay($event)"></my-toolbar>
-    <!-- Zone avec bannière et logo -->
-    <div id="conteneurLogo">
+<div class="row">
+  <div class="col-md-12">
+    <my-toolbar [errors]="errors" (emitShowError)="onDisplay($event)"></my-toolbar>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-3" [style.display]="isShowDetail?block:hidden" id="contenuDoc">
+    <my-error-detail [error]=""></my-error-detail>
+  </div>
+  <div class="class.col-md-12" [class.col-md-9]="isShowDetail" id="contenuSite">
+
+    <header id="header">
+      <!-- Static navbar -->
+      <!-- Destiné a devenir un ToolsComponent -->
+      <!-- Zone avec bannière et logo -->
+      <div id="conteneurLogo">
         <div class="container conteneur">
-            <div class="row">
-                <div id="conteneurLogoTexte" class="col-xs-7">
-                    <h1>
-                        <span class="mainTitle" style="float:left">
-                          <a href="#" (click)="selectPage('Accueil')">LE GROUPE LA POSTE</a>
-                        </span>
-                        <span class="subTitle" style="float:left" data-error="true">EN 2016</span>
-                    </h1>
-                </div>
-                <img id="logo" alt="LE GROUPE LA POSTE" src="public/images/logo.png" class="pull-right">
+          <div class="row">
+            <div id="conteneurLogoTexte" class="col-xs-7">
+              <h1>
+                <span class="mainTitle" style="float:left">
+                  <a href="#" (click)="selectPage('Accueil')">LE GROUPE LA POSTE</a>
+                </span>
+                <span class="subTitle" style="float:left" data-error="true">EN 2016</span>
+              </h1>
             </div>
+            <img id="logo" alt="LE GROUPE LA POSTE" src="public/images/logo.png" class="pull-right">
+          </div>
         </div>
-    </div>
-</header>
-<!-- Destiné a devenir un NavBarComponent -->
-<section>
-    <div id="conteneurMenu">
+      </div>
+    </header>
+    <!-- Destiné a devenir un NavBarComponent -->
+    <section>
+      <div id="conteneurMenu">
         <nav class="container barreMenu conteneur">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#" class="liensMenu" (click)="selectPage('Résultats')">Résultats</a></li>
-                <li><a href="#" class="liensMenu" (click)="selectPage('Dates clés')">Dates-clés</a></li>
-                <li><a href="#" class="liensMenu" (click)="selectPage('COMEX')">Comex</a></li>
-            </ul>
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#" class="liensMenu" (click)="selectPage('Résultats')">Résultats</a></li>
+            <li><a href="#" class="liensMenu" (click)="selectPage('Dates clés')">Dates-clés</a></li>
+            <li><a href="#" class="liensMenu" (click)="selectPage('COMEX')">Comex</a></li>
+          </ul>
         </nav><!-- /container -->
-    </div>
-</section>
-<!-- Section principale -->
-<div class="conteneurPrincipalMain">
-  <section class="container conteneur" id="conteneurPrincipal">
-      <div class="row">
-        <!-- Conteneur des articles, destiné a devenir ArticleListComponent -->
+      </div>
+    </section>
+    <!-- Section principale -->
+    <div class="conteneurPrincipalMain">
+      <section class="container conteneur" id="conteneurPrincipal">
+        <div class="row">
+          <!-- Conteneur des articles, destiné a devenir ArticleListComponent -->
           <div class="col-sm-8" id="principal">
             <!-- Balise custom, appele ArticleComponent, destiné a intégrer ArticleListComponent -->
-            <my-article-list [articles]='currArticles' [errorsDisplayed]="errorsDisplayed"></my-article-list>
+            <my-article-list [articles]='currArticles' [broadcast]="broadcast"></my-article-list>
           </div>
           <!-- Sidebar -->
           <my-sidebar></my-sidebar>
-      </div>
-      <!-- <my-error-list [errors]='errors'></my-error-list> -->
-  </section>
-</div>
-<footer>
-    <div class="container conteneur barreMenu">
+        </div>
+      </section>
+    </div>
+    <footer>
+      <div class="container conteneur barreMenu">
         WebDAN Angular2
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="#" class="liensMenu">Contact</a></li>
+          <li><a href="#" class="liensMenu">Contact</a></li>
         </ul>
-    </div>
-</footer>
+      </div>
+    </footer>
+  </div>
+</div>
