Comments and fixes for prez

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <!-- Tout l'affichage du projet se fait a partir de cette balise HTML -->
-    <my-app>Loading...</my-app>
+    <!-- Tout l'affichage de l'application se fait dynamiquement dans cette balise HTML -->
+    <my-app>
+      <!-- Les titres qui suivent ne sont présent que le temps du chargement de l'application-->
+      <h1 align="center">webDAN en chargement</h1>
+      <h2 align="center">Merci de patienter...</h2>
+    </my-app>
   </body>
 </html>
