--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <!-- Tout l'affichage de l'application se fait dynamiquement dans cette balise HTML -->
     <my-app>
       <!-- Les titres qui suivent ne sont présent que le temps du chargement de l'application-->
-      <h1 align="center">webDAN en chargement</h1>
-      <h2 align="center">Merci de patienter...</h2>
+      <h1 class="text-center">webDAN en chargement</h1>
+      <h2 class="text-center">Merci de patienter...</h2>
     </my-app>
   </body>
 </html>
